fix Ubutton letter spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -260,7 +260,6 @@ a {
   list-style-type: none;
   border: transparent;
   line-height: 27px;
-  letter-spacing: 0.09em;
 }
 /* Classes */
 .transition {
